[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/screenshot_popup.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/icons/flag.svg" id="2_flag"]

[node name="ScreenshotPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ScreenshotImage" type="TextureRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(650, 433)
layout_mode = 2
mouse_filter = 0
expand_mode = 1
stretch_mode = 5

[node name="ReportButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_colors/icon_normal_color = Color(0.6, 0.6, 0.6, 1)
modulate = Color(0.8, 0.8, 0.8, 1)
icon = ExtResource("2_flag")
text = "Report"

[node name="ReportConfirmDialog" type="ConfirmationDialog" parent="."]
title = "Report Content"
initial_position = 1
size = Vector2i(400, 120)
ok_button_text = "Report"
dialog_text = "Report this screenshot for inappropriate content?"
